Fixed splash intro visibility

--- a/app/app/static/css/style.css
+++ b/app/app/static/css/style.css
@@ -51,6 +51,7 @@ body {
     top:0;
     color:#f9f9f9;
     width:100%;
+    visibility:hidden;
 }
 
 #intro-text {
